--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,7 +44,7 @@
 
 
     "[django-html]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "editor.defaultFormatter": "junstyle.vscode-django-support",
         "breadcrumbs.showClasses": true,
         "editor.quickSuggestions": {
             "other": true,
